opam-version: "1.2"
version: "0.0.1"
maintainer: "phutur"
authors: ["Paul Laforgue" "Xavier Van de Woestyne"]
homepage: "https://github.com/phutur/neige"
bug-reports: "https://github.com/phutur/neige/issues"
dev-repo: "https://github.com/phutur/neige.git"
license: "MIT"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

depends: [
  "jbuilder" {build}
  "js_of_ocaml-compiler" {build & >= "3.0" & < "4.0"}
  "js_of_ocaml-ppx" {build & >= "3.0" & < "4.0"}
  "js_of_ocaml" {>= "3.0" & < "4.0"}
]
